data/derived/comb/progs/unify/prog5391.ml.out
Characters 29-37:
  let fixpoint (f,b) = wwhile ((f' f b),b);;
                               ^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
